Hopefully fixing issue #3
